[package]
name = "rust-gstreamer-playground"
version = "0.1.0"
authors = ["phanmn"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glib = { git = "https://github.com/gtk-rs/gtk-rs" }
gst = { package = "gstreamer", version = "0.16" }
gst_app = { package = "gstreamer-app", version = "0.16" }
gst_video = { package = "gstreamer-video", version = "0.16" }
gst_audio = { package = "gstreamer-audio", version = "0.16" }
derive_more = "0.99"
anyhow = "1.0"
byte-slice-cast = "1"

[[bin]]
name = "appsrc"

[[bin]]
name = "appsink"

[[bin]]
name = "video_converter"